Add Hotspot Animations and Fonts
In this commit, the animated hotspots where added as well as its hover state. The fonts were also added

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
   </head>
   <body>
+
+    <h1>Sony LiveBuds Series</h1>
     <!-- <model-viewer> HTML element -->
       <model-viewer id="model" src="model/earbud-model.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="0.73" exposure="0.83">
 
-        <button class="Hotspot" slot="hotspot-1" data-position="0.005841734626967465m 0.27103248127993673m 0.19796179910924638m" data-normal="2.4492937051703357e-16m 3.126511277583096e-39m 1m" data-visibility-attribute="visible">
+        <button class="Hotspot" slot="hotspot-1" data-position="0.005841734626967465m 0.24m 0.19796179910924638m" data-normal="2.4492937051703357e-16m 3.126511277583096e-39m 1m" data-visibility-attribute="visible">
         <div id="hotspot-1" class="HotspotAnnotation"></div>
       </button>
         
