--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
         </div>
       </model-viewer>  
 
+      <div id="mobile-info">
+        <img src="images/mobile-infos.jpg" alt="Mobile Info" />
+      </div>
+
       <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
     <script src="js/main.js"></script>
