--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
   <head>
     <title>Sony LiveBuds Series</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="initial-scale=1.0, width=device-width">
     <link href="css/main.css" rel="stylesheet"/>
-    <!-- link to greensock main library -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+
   </head>
   <body>
 
@@ -46,9 +45,6 @@
       </div>
     </header>
     
-
-  
-
  
     <!-- <model-viewer> HTML element -->
       <model-viewer id="model" src="model/earbud-model.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="poster.webp" shadow-intensity="0.73" exposure="0.83">
@@ -89,6 +85,104 @@
         <img src="images/mobile-infos.jpg" alt="Mobile Info" />
       </div>
 
+      <div class="full-width-grid-con">
+        <div class="col-start-2 col-end-3">
+            <div class="content">
+                <h1>Cras tincidunt lobortis</h1>
+                <p>
+                Gravida quis blandit turpis cursus in. Tellus in metus vulputate eu
+                scelerisque felis. Sed vulputate mi sit amet mauris. Iaculis urna id
+                volutpat lacus laoreet. Duis tristique sollicitudin nibh sit. Dui
+                vivamus arcu felis bibendum ut tristique. Morbi tincidunt augue interdum
+                velit. Diam phasellus vestibulum lorem sed risus ultricies tristique.
+                Varius duis at consectetur lorem donec. Massa sed elementum tempus
+                egestas sed. Tortor condimentum lacinia quis vel eros donec ac odio
+                tempor. Amet mattis vulputate enim nulla aliquet porttitor lacus luctus.
+                Nunc aliquet bibendum enim facilisis. Volutpat sed cras ornare arcu dui
+                vivamus arcu. Faucibus a pellentesque sit amet. Senectus et netus et
+                malesuada fames ac turpis egestas integer. Bibendum at varius vel
+                pharetra vel. Non enim praesent elementum facilisis leo. Pharetra diam
+                sit amet nisl suscipit. Egestas erat imperdiet sed euismod.
+                </p>
+                <p>
+                Tortor aliquam nulla facilisi cras fermentum odio eu feugiat.
+                Suspendisse ultrices gravida dictum fusce ut placerat. Semper risus in
+                hendrerit gravida rutrum quisque non tellus orci. Sed adipiscing diam
+                donec adipiscing tristique risus nec feugiat. Ultrices tincidunt arcu
+                non sodales neque sodales ut etiam sit. Vitae proin sagittis nisl
+                rhoncus mattis rhoncus urna. Ut etiam sit amet nisl purus in mollis
+                nunc. Suspendisse faucibus interdum posuere lorem. Mauris commodo quis
+                imperdiet massa. Pretium vulputate sapien nec sagittis aliquam. Lorem
+                ipsum dolor sit amet consectetur adipiscing elit pellentesque. Auctor eu
+                augue ut lectus arcu bibendum at varius.
+                </p>
+                <p>
+                Commodo viverra maecenas accumsan lacus. Diam vel quam elementum
+                pulvinar etiam non. Turpis egestas integer eget aliquet nibh. Cras
+                tincidunt lobortis feugiat vivamus at augue. Ornare aenean euismod
+                elementum nisi quis. Aliquet enim tortor at auctor urna nunc id cursus.
+                Etiam dignissim diam quis enim lobortis scelerisque fermentum dui. Et
+                odio pellentesque diam volutpat commodo. Euismod nisi porta lorem mollis
+                aliquam ut porttitor leo a. Sollicitudin aliquam ultrices sagittis orci.
+                Netus et malesuada fames ac turpis egestas maecenas pharetra convallis.
+                Facilisi cras fermentum odio eu feugiat pretium nibh ipsum. Leo integer
+                malesuada nunc vel risus commodo. Dapibus ultrices in iaculis nunc sed.
+                Tellus pellentesque eu tincidunt tortor aliquam. Volutpat maecenas
+                volutpat blandit aliquam etiam erat velit scelerisque.
+                </p>
+                </div>
+        </div>   
+      <div class="col-span-full">
+        <canvas id="explode-view"></canvas> 
+    </div>
+
+    <div class="full-width-grid-con">
+      <div class="col-start-2 col-end-3">
+          <div class="content">
+              <h1>Cras tincidunt lobortis</h1>
+              <p>
+              Gravida quis blandit turpis cursus in. Tellus in metus vulputate eu
+              scelerisque felis. Sed vulputate mi sit amet mauris. Iaculis urna id
+              volutpat lacus laoreet. Duis tristique sollicitudin nibh sit. Dui
+              vivamus arcu felis bibendum ut tristique. Morbi tincidunt augue interdum
+              velit. Diam phasellus vestibulum lorem sed risus ultricies tristique.
+              Varius duis at consectetur lorem donec. Massa sed elementum tempus
+              egestas sed. Tortor condimentum lacinia quis vel eros donec ac odio
+              tempor. Amet mattis vulputate enim nulla aliquet porttitor lacus luctus.
+              Nunc aliquet bibendum enim facilisis. Volutpat sed cras ornare arcu dui
+              vivamus arcu. Faucibus a pellentesque sit amet. Senectus et netus et
+              malesuada fames ac turpis egestas integer. Bibendum at varius vel
+              pharetra vel. Non enim praesent elementum facilisis leo. Pharetra diam
+              sit amet nisl suscipit. Egestas erat imperdiet sed euismod.
+              </p>
+              <p>
+              Tortor aliquam nulla facilisi cras fermentum odio eu feugiat.
+              Suspendisse ultrices gravida dictum fusce ut placerat. Semper risus in
+              hendrerit gravida rutrum quisque non tellus orci. Sed adipiscing diam
+              donec adipiscing tristique risus nec feugiat. Ultrices tincidunt arcu
+              non sodales neque sodales ut etiam sit. Vitae proin sagittis nisl
+              rhoncus mattis rhoncus urna. Ut etiam sit amet nisl purus in mollis
+              nunc. Suspendisse faucibus interdum posuere lorem. Mauris commodo quis
+              imperdiet massa. Pretium vulputate sapien nec sagittis aliquam. Lorem
+              ipsum dolor sit amet consectetur adipiscing elit pellentesque. Auctor eu
+              augue ut lectus arcu bibendum at varius.
+              </p>
+              <p>
+              Commodo viverra maecenas accumsan lacus. Diam vel quam elementum
+              pulvinar etiam non. Turpis egestas integer eget aliquet nibh. Cras
+              tincidunt lobortis feugiat vivamus at augue. Ornare aenean euismod
+              elementum nisi quis. Aliquet enim tortor at auctor urna nunc id cursus.
+              Etiam dignissim diam quis enim lobortis scelerisque fermentum dui. Et
+              odio pellentesque diam volutpat commodo. Euismod nisi porta lorem mollis
+              aliquam ut porttitor leo a. Sollicitudin aliquam ultrices sagittis orci.
+              Netus et malesuada fames ac turpis egestas maecenas pharetra convallis.
+              Facilisi cras fermentum odio eu feugiat pretium nibh ipsum. Leo integer
+              malesuada nunc vel risus commodo. Dapibus ultrices in iaculis nunc sed.
+              Tellus pellentesque eu tincidunt tortor aliquam. Volutpat maecenas
+              volutpat blandit aliquam etiam erat velit scelerisque.
+              </p>
+              </div>
+      </div>   
 
       <footer class="footer grid-con">
         <div id="footer-logo">
@@ -152,6 +246,8 @@
 
       <!-- Loads <model-viewer> for browsers: -->
     <script type="module" src="https://ajax.googleapis.com/ajax/libs/model-viewer/3.5.0/model-viewer.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/ScrollTrigger.js"></script>
     <script src="js/main.js"></script>
   </body>
 </html>
