Add Xray Slider Code
In this commit the xray slider was added along with its functionality

--- a/index.html
+++ b/index.html
@@ -168,6 +168,31 @@
       </div>
       </section>
 
+      <section id="xray-section">
+        <div id="xray-wrapper" class="grid-con">
+          <div class="col-span-full">
+            <section id="mobile-tablet-view">
+                <img src="images/xray-colored.jpg" alt="X-ray view of earbud">
+                <img src="images/xray-wireframe-black.jpg" alt="'Textured view of earbud">
+            </section>
+
+            <div id="comparison-con">
+                <div id="xray">
+                    <div id="divisor"></div>
+                </div>
+                <input type="range" min="0" max="100" value="50" id="slider">
+            </div>
+
+
+        </div>
+
+
+
+        </div>
+
+
+      </section>
+
         
 
 
