--- a/index.html
+++ b/index.html
@@ -205,12 +205,12 @@
           </div>
         </div>
         <div id="color-image">
-          <img src="images/product-black.jpg" id="ear-buds" alt="Earbuds">
+          <img src="images/product-white.jpg" id="ear-buds" alt="Earbuds">
         </div>
       </section>
       
 
-      <section>
+      <section id="footer-promotion">
       <h2 class="hidden">Footer Promo</h2>
         <div id="footer-promo">
           <img src="images/footer-promo.jpg" alt="Footer Promo Image">
