Fix Model Viewer Controls
In this commit, the model viewer zoom has been disabled

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <p>Design and Craftsmanship: <br>Showcasing the beauty of cutting-edge technology</p>
         </div>
 
-        <model-viewer id="model" src="model/earbud-model.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="images/poster.webp" shadow-intensity="0.73" exposure="0.83">
+        <model-viewer id="model" src="model/earbud-model.gltf" ar ar-modes="webxr scene-viewer quick-look" camera-controls tone-mapping="neutral" poster="images/poster.webp" shadow-intensity="0.73" exposure="0.83" disable-zoom touch-action="none">
 
           <button class="Hotspot" slot="hotspot-1" data-position="0.005841734626967465m 0.24m 0.19796179910924638m" data-normal="2.4492937051703357e-16m 3.126511277583096e-39m 1m" data-visibility-attribute="visible">
           <span id="hotspot-1" class="HotspotAnnotation"></span>
